--- a/BarFinder/views/index.pug
+++ b/BarFinder/views/index.pug
@@ -1,5 +1,72 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome #{title}
+doctype html
+html(lang='en')
+  head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    // Latest compiled and minified CSS
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
+    // Optional theme
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css', integrity='sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp', crossorigin='anonymous')
+    link(href='https://fonts.googleapis.com/css?family=Amatic+SC:700', rel='stylesheet')
+    script(src='https://use.fontawesome.com/39b94259c3.js')
+    link(rel='stylesheet', href='stylesheets/index.css')
+    title The Bar Finder
+    link(rel='icon', href='images/bariconsmall.png')
+  body
+    .container
+      nav.navbar.navbar-default
+        .container-fluid
+          .navbar-header
+            button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+              span.sr-only Toggle navigation
+              span.icon-bar
+              span.icon-bar
+              span.icon-bar
+            a.navbar-brand(href='#') BarFinder
+          #navbar.navbar-collapse.collapse
+            ul.nav.navbar-nav
+              li.active
+                a(href='#')
+                  i.fa.fa-home(aria-hidden='true')
+                  |  Home
+              li
+                a(href='#')
+                  i.fa.fa-users(aria-hidden='true')
+                  |  Groups
+              
+            ul.nav.navbar-nav.navbar-right
+              li
+                a(href='#')
+                  i.fa.fa-envelope(aria-hidden='true')
+                  |  Inbox
+              li
+                a(href='#')
+                  i.fa.fa-heart(aria-hidden='true')
+                  |  Preferences
+              li.dropdown
+                a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
+                  i.fa.fa-user-circle(aria-hidden='true')
+                  |  #{title}
+                  span.caret
+                ul.dropdown-menu
+                  li
+                    a(href='#') Profile
+                  li
+                    a(href='#') Friends
+                  li.divider(role='separator')
+                  li
+                    a(href='#') Settings
+                  li
+                    a(href='#') Logout
+          // /.nav-collapse
+        // /.container-fluid
+      .search-buttons
+        .half
+          button#advanced_btn.btn.btn-default.btn-lg.btn-block Advanced Search
+        .half
+          button.btn.btn-default.btn-lg.btn-block Quick Find
+      
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
+    // Latest compiled and minified JavaScript
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
