--- a/BarFinder/views/home.pug
+++ b/BarFinder/views/home.pug
@@ -23,7 +23,7 @@ html(lang='en')
               span.icon-bar
               span.icon-bar
               span.icon-bar
-            a.navbar-brand(href='#') BarFinder
+            a.navbar-brand(href='#', font= 'Times New Roman') BarFinder
           #navbar.navbar-collapse.collapse
             ul.nav.navbar-nav
               li.active
