Notification delete on backend works TODO: make delete on frontend(ran out of notifications)

--- a/BarFinder/views/notifications.pug
+++ b/BarFinder/views/notifications.pug
@@ -64,7 +64,7 @@ html(lang='en')
               button.glyphicon.glyphicon-remove(value="" + notif._id)
           else
             li 
-              No new notifications for you.
+              p No new notifications for you.
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
     // Latest compiled and minified JavaScript
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
