Got data from imput TODO:make ajax call, dynamically populate list

--- a/BarFinder/views/home.pug
+++ b/BarFinder/views/home.pug
@@ -27,7 +27,7 @@ html(lang='en')
           #navbar.navbar-collapse.collapse
             ul.nav.navbar-nav
               li.active
-                a(href='#')
+                a(href='/search')
                   i.fa.fa-home(aria-hidden='true')
                   |  Home
               li
