--- a/BarFinder/views/home.pug
+++ b/BarFinder/views/home.pug
@@ -31,7 +31,7 @@ html(lang='en')
                   i.fa.fa-home(aria-hidden='true')
                   |  Home
               li
-                a(href='#')
+                a(href='/groups')
                   i.fa.fa-users(aria-hidden='true')
                   |  Groups
             ul.nav.navbar-nav.navbar-right
@@ -40,7 +40,7 @@ html(lang='en')
                   i.fa.fa-envelope(aria-hidden='true')
                   |  Notifications
               li
-                a(href='#')
+                a(href='/preferences')
                   i.fa.fa-heart(aria-hidden='true')
                   |  Preferences
               li.dropdown
