--- a/BarFinder/views/groups.pug
+++ b/BarFinder/views/groups.pug
@@ -24,7 +24,7 @@ html(lang='en')
               span.icon-bar
               span.icon-bar
               span.icon-bar
-            a.navbar-brand(href='#') BarFinder
+            a.navbar-brand(href='http://10.10.10.10:3000/') BarFinder
           #navbar.navbar-collapse.collapse
             ul.nav.navbar-nav
               li.active
@@ -52,7 +52,6 @@ html(lang='en')
                 ul.dropdown-menu
                   li
                     a(href='#') Logout
-      div #{groups}
       div(id='content')
         ul.notificationList
           each group in groups
