--- a/BarFinder/views/search.pug
+++ b/BarFinder/views/search.pug
@@ -64,6 +64,11 @@ html(lang='en')
         .adv-search-fields.text-center
           #half-select.row
             .col-sm-1
+              p Name
+            .col-sm-11
+              input#nameInput(style='width: 100%')
+          #half-select.row
+            .col-sm-1
               p Attire
             .col-sm-5
               select#attireSelect.multiple-select-down(multiple='')
