--- a/BarFinder/views/group.pug
+++ b/BarFinder/views/group.pug
@@ -98,7 +98,7 @@ html(lang='en')
         div.form-group
           label(for='inputsm') Add user:
           input#inputsm.form-control.input-sm(type='text')
-        button#searchButton.btn.btn-default() Search
+        button#searchButton.btn.btn-default Search
         ul#toAddUsers.notificationList
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
     // Latest compiled and minified JavaScript
