--- a/BarFinder/views/groups.pug
+++ b/BarFinder/views/groups.pug
@@ -51,7 +51,7 @@ html(lang='en')
                   span.caret
                 ul.dropdown-menu
                   li
-                    a(href='#') Logout
+                    a(href='/logout') Logout
       div(id='content')
         ul.notificationList
           each group in groups
