--- a/BarFinder/views/search.pug
+++ b/BarFinder/views/search.pug
@@ -51,11 +51,10 @@ html(lang='en')
                   span.caret
                 ul.dropdown-menu
                   li
-                    a(href='#') Logout
+                    a(href='/logout') Logout
           // /.nav-collapse
         // /.container-fluid
       #content
-        p #{selectables.categories}
         .search-buttons
           .half
             button#advanced_btn.btn.btn-default.btn-lg.btn-block Advanced Search
