--- a/BarFinder/views/notifications.pug
+++ b/BarFinder/views/notifications.pug
@@ -26,7 +26,7 @@ html(lang='en')
               span.icon-bar
               span.icon-bar
               span.icon-bar
-            a.navbar-brand(href='#') BarFinder
+            a.navbar-brand(href='http://10.10.10.10:3000') BarFinder
           #navbar.navbar-collapse.collapse
             ul.nav.navbar-nav
               li
@@ -53,7 +53,7 @@ html(lang='en')
                   span.caret
                 ul.dropdown-menu
                   li
-                    a(href='#') Logout
+                    a(href='/logout') Logout
       div(id='content')
         ul.notificationList
           each notif in notifications
