--- a/BarFinder/views/reviews.pug
+++ b/BarFinder/views/reviews.pug
@@ -25,7 +25,7 @@ html(lang='en')
               span.icon-bar
               span.icon-bar
               span.icon-bar
-            a.navbar-brand(href='#') BarFinder
+            a.navbar-brand(href='http://10.10.10.10:3000') BarFinder
           #navbar.navbar-collapse.collapse
             ul.nav.navbar-nav
               li
@@ -52,7 +52,7 @@ html(lang='en')
                   span.caret
                 ul.dropdown-menu
                   li
-                    a(href='#') Logout
+                    a(href='/logout') Logout
           // /.nav-collapse
         // /.container-fluid
       #maindiv
